      ignored.
  o DeckLink consumer:
    + Rewrote the frame hand-off between send() and ScheduledFrameCompleted() in
      a way that hopefully resolves all dead-lock scenarios previously possible.
  o Bluefish consumer:
    + Largely rewritten against newest SDK, giving support for newer hardware
      and features (Satchit Nambiar and James Wise sponsored by Bluefish444).

Producers
---------

  o FFmpeg producer:
    + Increased the max number of frames that audio/video can be badly
      interleaved with (Dimitry Ishenko).
    + Fixed bug where decoders sometimes requires more than one video packet to
      decode the first frame.
    + Added support for IN and OUT parameters (Dimitry Ishenko).
    + Added DV/HDV video device support under Linux (Walter Sonius).
    + Remove unused flags variable in queued_seek (Dimitry Ishenko).
    + Now recognizes .ts files without probing contents (Ovidijus Striaukas).
  o Destroy producer proxy:
    + Created workaround for bug in FFmpeg where every new thread used to
      cleanup caused handles to leak (not sure why). Reduced the effect by using
      only one thread for all producer destructions.
  o Framerate producer:
    + Fixed bug when INFO was used on a not yet playing framerate producer.
  o HTML producer:
    + Fixed bug where only URL:s with . in them where recognized.
  o Image producer:
    + Added LENGTH parameter to allow for queueing with LOADBG AUTO.
    + Fixed inconsistency in what file extensions are supported vs listed in
      CLS/CINF.
  o Layer producer:
    + Fixed serious bug where a circular reference of layer producers caused a
      stack overflow and server crash.
  o Scene producer:
    + Added abs(), floor(), to_lower(), to_upper() and length() functions to the
      expression language.
    + Created XML Schema for the *.scene XML format. Allows for IDE-like auto-
      completion, API documentation and validation.